k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-app
  template:
    metadata:
      labels:
        app: weather-app
        version: v3
    spec:
      containers:
        - name: weather-app
          image: shinee8241/nodejs2025:latest
          ports:
            - containerPort: 3000
