k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-app
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: weather.dlp.mn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: weather-app
            port:
              number: 80
